--- a/public/locales/cs.json
+++ b/public/locales/cs.json
@@ -1,3 +1,29 @@
 {
-    "heading": "clean simple aesthetic cz"
+    "heading": "čistá jednoduchá estetika",
+    "infoSectionHeading": "khan.project | tvorba udržitelné budoucnosti",
+    "infoSectionText": "Vítejte v oficiálním portfoliu, kde se budoucnost architektury setkává s ekologickou zodpovědností. Nargiza Khananova je architektka s vášní pro inovativní design a závazkem vytvářet udržitelný svět prostřednictvím svých tvorb. Objevte její jedinečný přístup a prozkoumejte přelomové projekty, které jí vysloužily uznání v oboru.",
+    "infoSectionButtonText": "O mně",
+    "protfolioSectionHeadingDesktop": "Ponořte se do světa vizionářských architektonických projektů a svědkem budoucnosti udržitelného designu.",
+    "protfolioSectionHeadingMobile": "Ponořte se do světa vizionářských architektonických projektů",
+    "servicesSectionHeading": "khan.project | komplexní architektonická řešení přizpůsobená vaší vizi",
+    "servicesSectionText": "Nabízíme širokou škálu architektonických služeb, které vyhovují jedinečným potřebám každého klienta. Naším cílem je vytvářet inovativní, udržitelné a funkční návrhy, které zlepšují způsob, jakým lidé žijí, pracují a interagují s prostory kolem nich.",
+    "servicesSectionButtonText": "Prozkoumejte naše služby",
+    "smSectionHeading": "Buďte informováni o našich nejnovějších projektech a poznatcích z designu",
+    "smSectionText": "Připojte se k naší rostoucí komunitě nadšenců pro design, klientů a odborníků z průmyslu tím, že budete sledovat khan.project architekturu na sociálních médiích. Pravidelně sdílíme aktualizace projektů, pohledy do zákulisí našeho designového procesu, trendy v průmyslu a inspiraci ze světa architektury a designu.",
+    "testimonialsHeading": "khan.project | poslechněte si, co naši klienti říkají",
+    "testimonial1Text": "Spolupráce s architektem byla naprostým potěšením. Jejich pozornost k detailům a schopnost pochopit naši vizi skutečně překročily naše očekávání. Náš vysněný dům je nyní skutečností, díky jejich odbornosti.",
+    "testimonial1Author": "Michael R., Městský klient",
+    "testimonial2Text": "Byli jsme ohromeni kreativními nápady a inovativními návrhy architekta. Přeměnili náš prostor na něco skutečně pozoruhodného. Jejich profesionalita a oddanost během projektu byly chvályhodné.",
+    "testimonial2Author": "Sarah J., Komerční klient",
+    "testimonial3Text": "Schopnost architekta skloubit funkčnost a estetiku je skutečně pozoruhodná. Přeměnili naši komerční budovu na mistrovské dílo, optimalizovali prostor jak pro praktičnost, tak pro krásu. Vysoce doporučujeme!",
+    "testimonial3Author": "Michael J., Komerční klient",
+    "testimonial4Text": "Architektova očí pro detail a jejich schopnost přeložit naši vizi do reality je pozoruhodná. Trpělivě poslouchali naše požadavky a předložili návrh, který dokonale vyhovoval našemu stylu. Nemohli bychom být šťastnější!",
+    "testimonial4Author": "Emily D., Rezidenční klient",
+    "testimonial5Text": "Práce s architektem byl úžasný zážitek. Přinesli svěží perspektivu a inovativní řešení. Jejich odbornost a profesionalita udělaly celý proces hladkým a příjemným. Jsme extrémně spokojeni s výsledky.",
+    "testimonial5Author": "David D., Rezidenční klient",
+    "contactHeading": "Zaměstnejte nás pro váš projekt",
+    "contactText": "Kontaktujte nás jakýmkoli vhodným způsobem, abychom prodiskutovali detaily.",
+    "contactMailUs": "napište nám",
+    "contactPhoneUs": "zavolejte nám"
 }
+    
