--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -8,7 +8,7 @@
     "servicesSectionHeading": "khan.project | comprehensive architectural solutions tailored to your vision",
     "servicesSectionText": "We offer a wide range of architectural services to meet the unique needs of each client. Our goal is to create innovative, sustainable, and functional designs that elevate the way people live, work, and interact with the spaces around them.",
     "servicesSectionButtonText": "Explore Our Services",
-    "smSectionHeading": "stay updated on our latest projects and design insights",
+    "smSectionHeading": "Stay updated on our latest projects and design insights",
     "smSectionText": "Join our growing community of design enthusiasts, clients, and industry professionals by following khan.project architecture on social media. We regularly share project updates, behind-the-scenes looks at our design process, industry trends, and inspiration from the world of architecture and design.",
     "testimonialsHeading": "khan.project | hear what our clients have to say",
     "testimonial1Text": "Working with the architect was an absolute pleasure. Their attention to detail and ability to understand our vision truly exceeded our expectations. Our dream home is now a reality, thanks to their expertise.",
@@ -21,7 +21,7 @@
     "testimonial4Author": "Emily D.,  Residential Client",
     "testimonial5Text": "Working with the architect was an incredible experience. They brought a fresh perspective and innovative solutions to the table. Their expertise and professionalism made the entire process smooth and enjoyable. We are extremely satisfied with the results.",
     "testimonial5Author": "David D.,  Residential Client",
-    "contactHeading": "hire us for your project",
+    "contactHeading": "Hire us for your project",
     "contactText": "Contact us in any convenient way to discuss the details.",
     "contactMailUs": "mail us",
     "contactPhoneUs": "phone us"
