change lanuage switch, add documnet file

--- a/public/locales/cs.json
+++ b/public/locales/cs.json
@@ -24,6 +24,9 @@
     "contactHeading": "Zaměstnejte nás pro váš projekt",
     "contactText": "Kontaktujte nás jakýmkoli vhodným způsobem, abychom prodiskutovali detaily.",
     "contactMailUs": "napište nám",
-    "contactPhoneUs": "zavolejte nám"
+    "contactPhoneUs": "zavolejte nám",
+    "menuProjects": "projecty",
+    "menuServices": "služby",
+    "menuAbout": "o mně"
 }
     
